<resources>
    <string name="app_name">Planner</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="FirstText">Привет мир!</string>
    <string name="MainText">Вас Вітає Програма-Планер для ваших планів</string>
    <string name="ExitButton">Вихід</string>
    <string name="SendButton">Отправить</string>
    <string name="WelcomeText">Введіть Ваше ім\'я для початку роботи</string>
    <string name="NewAction">Додати нову подію</string>
    <string name="NewAction1">На головну</string>
    <string name="Monday">Понеділок</string>
    <string name="Tuesday">Вівторок</string>
    <string name="Wednesday">Середа</string>
    <string name="Thursday">Четвер</string>
    <string name="Friday">Пятниця</string>
    <string name="Saturday">Субота</string>
    <string name="Sunday">Неділя</string>
    <string name="Weekend">Вихідні</string>
    <string name="name">TextView</string>
    <string name="title_activity_schedule">Schedule</string>
    <string name="Zagolovok">Введіть назву та час запланованої дії</string>
    <string name="NameOf">Назва Події</string>
    <string name="Plain">Введіть назву події</string>
    <string name="Time">Час</string>
    <string name="End">Кінець</string>
    <string name="Timen">Введіть час події</string>
    <string name="chipping">Часовий проміжок</string>
    <string name="Start">Початок</string>
    <string name="StartOfAction">Початок події</string>
    <string name="EndOfAction">Кінець події</string>
    <string name="Timenn">Часовий проміжок</string>
    <string name="returning">Повернутись</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="information">I`m 20 years old, living in Chernivtsi, Ukraine. For \n
whole my life i was always interested in Computer \n
Science and tried to understand how to use this \n
passion in future. When i had to decide which \n
profession would accomplish earning money and \n
doing what i love most i found out that Department \n
of Computer Science in Institute of Physical, \n
Technical and Computer Sciences would be the best \n
decision. I always trying to learn new information \n
from everywhere: from university, from different \n
internet sources etc. I would like to work in \n
team because of my sociable skills and leader \n
qualities. I can perceive a new information and use it \n
as quick as it possible.
VIKTOR
KOROLENKO</string>
    <string name="ss">\@string/information</string>
    <string name="planner_1_0_2">
        Основные функции программы:
        \n • «регистрация» пользователя
        \n • Определение распорядка недели по дням
        \n • Возможность добавить событие к дню (пока лишь к понедельнику, в дальнейших версиях будет возможность добавить и к другим дням)
        \n • Возможность уточнения конкретного часа или промежутка времени
        \n • Меню навигации в программе • Информационный блок про разработчика
        \n • Возможность поделится информацией про разработчика
        \n Что планируется в дальнейшем:
        \n • Модифицировать запись событий по дням
        \n • Добавление кнопки «редактировать» и «удалить»
        \n • Добавление функционала смены темы
        \n • Реальная регистрация пользователя (пока без подтверждения с почтой)
        \n • Возможность поделится любым событием любым доступным методом смартфона
        \n • Реализация «гибкого» интерфейса</string>
    <string name="zz">Информация о программе «planner»:\n Версия: 1.0.2 \n </string>
    <string name="header">dsfgsdft</string>
</resources>