<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CDDC39"
    tools:context=".Schedule"
    tools:visibility="visible">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center"
        android:text="@string/Zagolovok"
        android:textColor="#673AB7"
        android:textSize="22sp"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="153dp"
        android:layout_height="39dp"
        android:layout_alignBottom="@+id/textView12"
        android:layout_marginBottom="-64dp"
        android:gravity="center"
        android:text="@string/NameOf"
        android:textColor="#673AB7"
        android:textSize="24sp"
        tools:visibility="visible" />

    <EditText
        android:id="@+id/NameOfAction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView13"
        android:layout_marginBottom="-67dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/Plain"
        android:inputType="textPersonName"
        tools:visibility="visible" />

    <EditText
        android:id="@+id/editTextTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView14"
        android:layout_marginBottom="-54dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/Timen"
        android:inputType="time"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="153dp"
        android:layout_height="39dp"
        android:layout_alignBottom="@+id/NameOfAction"
        android:layout_marginBottom="-46dp"
        android:gravity="center"
        android:text="@string/Time"
        android:textColor="#673AB7"
        android:textSize="24sp"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="140dp"
        android:layout_height="30dp"
        android:layout_below="@+id/checkBox"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="18dp"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="13dp"
        android:layout_marginBottom="-49dp"
        android:gravity="center"
        android:text="@string/Start"
        android:textColor="#673AB7"
        android:textSize="24sp"
        android:visibility="invisible"
        tools:visibility="invisible" />

    <EditText
        android:id="@+id/editTextTime3"
        android:layout_width="191dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/checkBox"
        android:layout_marginStart="42dp"
        android:layout_marginLeft="42dp"
        android:layout_marginTop="50dp"
        android:layout_toEndOf="@+id/editTextTime2"
        android:layout_toRightOf="@+id/editTextTime2"
        android:ems="10"
        android:hint="@string/EndOfAction"
        android:importantForAutofill="no"
        android:inputType="time"
        android:visibility="invisible"
        tools:visibility="invisible" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="140dp"
        android:layout_height="30dp"
        android:layout_below="@+id/checkBox"
        android:layout_marginStart="87dp"
        android:layout_marginLeft="87dp"
        android:layout_marginTop="13dp"
        android:layout_marginBottom="-49dp"
        android:layout_toEndOf="@+id/textView15"
        android:layout_toRightOf="@+id/textView15"
        android:gravity="center"
        android:text="@string/End"
        android:textColor="#673AB7"
        android:textSize="24sp"
        android:visibility="invisible"
        tools:visibility="invisible" />

    <EditText
        android:id="@+id/editTextTime2"
        android:layout_width="168dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/checkBox"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:hint="@string/StartOfAction"
        android:importantForAutofill="no"
        android:inputType="time"
        android:visibility="invisible"
        tools:visibility="invisible" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextTime"
        android:layout_marginTop="70dp"
        android:checked="false"
        android:onClick="onClick"
        android:text="@string/Timenn"
        android:textColor="#673AB7"
        tools:visibility="visible" />

    <Button
        android:id="@+id/button10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextTime3"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="156dp"
        android:background="#673AB7"
        android:gravity="center"
        android:onClick="returning"
        android:text="Повернутись"
        android:textColor="#8BC34A" />

    <Button
        android:id="@+id/button11"
        android:layout_width="114dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextTime3"
        android:layout_marginStart="168dp"
        android:layout_marginLeft="168dp"
        android:layout_marginTop="156dp"
        android:layout_toEndOf="@+id/button10"
        android:layout_toRightOf="@+id/button10"
        android:background="#673AB7"
        android:gravity="center"
        android:onClick="GoNext"
        android:text="Прийняти"
        android:textColor="#8BC34A" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView12"
        android:layout_marginStart="76dp"
        android:layout_marginLeft="76dp"
        android:layout_marginTop="26dp"
        android:layout_toEndOf="@+id/textView13"
        android:layout_toRightOf="@+id/textView13"
        android:text="TextView"
        tools:visibility="invisible" />

</RelativeLayout>