<?xml version="1.0" encoding="utf-8"?>
<GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CDDC39"
    tools:context=".DisplayMessageActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="0"
        android:text="@string/Monday"
        android:textColor="#000000"
        android:textSize="24sp"
        tools:text="Понеділок" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="3"
        android:layout_column="0"
        android:text="@string/Tuesday"
        android:textColor="#000000"
        android:textSize="24sp"
        tools:text="Вівторок" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="5"
        android:layout_column="0"
        android:text="@string/Wednesday"
        android:textColor="#000000"
        android:textSize="24sp"
        tools:text="Середа" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="9"
        android:layout_column="0"
        android:text="@string/Friday"
        android:textColor="#000000"
        android:textSize="24sp"
        tools:text="П'ятниця" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="12"
        android:layout_column="0"
        android:text="@string/Saturday"
        android:textColor="#000000"
        android:textSize="24sp"
        tools:text="Субота" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="14"
        android:layout_column="0"
        android:text="@string/Sunday"
        android:textColor="#000000"
        android:textSize="24sp"
        tools:text="Неділя" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="7"
        android:layout_column="0"
        android:text="@string/Thursday"
        android:textColor="#000000"
        android:textSize="24sp"
        tools:text="Четвер" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="2"
        android:background="#673AB7"
        android:minHeight="28dip"
        android:onClick="planning"
        android:text="@string/NewAction"
        android:textColor="#8BC34A"
        android:textSize="12sp" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="4"
        android:layout_column="2"
        android:background="#673AB7"
        android:minHeight="28dip"
        android:onClick="planning"
        android:text="@string/NewAction"
        android:textColor="#8BC34A"
        android:textSize="12sp" />

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="6"
        android:layout_column="2"
        android:background="#673AB7"
        android:minHeight="28dip"
        android:onClick="planning"
        android:text="@string/NewAction"
        android:textColor="#8BC34A"
        android:textSize="12sp" />

    <Button
        android:id="@+id/button6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="10"
        android:layout_column="2"
        android:background="#673AB7"
        android:minHeight="28dip"
        android:onClick="planning"
        android:text="@string/NewAction"
        android:textColor="#8BC34A"
        android:textSize="12sp" />

    <Button
        android:id="@+id/button8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="13"
        android:layout_column="2"
        android:background="#673AB7"
        android:minHeight="28dip"
        android:onClick="planning"
        android:text="@string/NewAction"
        android:textColor="#8BC34A"
        android:textSize="12sp" />

    <Button
        android:id="@+id/button9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="15"
        android:layout_column="2"
        android:background="#673AB7"
        android:minHeight="28dip"
        android:onClick="planning"
        android:text="@string/NewAction"
        android:textColor="#8BC34A"
        android:textSize="12sp" />

    <Button
        android:id="@+id/button12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="16"
        android:layout_column="1"
        android:layout_gravity="center"
        android:background="#673AB7"
        android:gravity="center"
        android:minHeight="28dip"
        android:onClick="BackWard"
        android:text="@string/NewAction1"
        android:textColor="#8BC34A"
        android:textSize="18sp" />

    <Button
        android:id="@+id/button7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="8"
        android:layout_column="2"
        android:background="#673AB7"
        android:minHeight="28dip"
        android:onClick="planning"
        android:text="@string/NewAction"
        android:textColor="#8BC34A"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="163dp"
        android:layout_height="wrap_content"
        android:layout_row="11"
        android:layout_column="1"
        android:gravity="center"
        android:text="@string/Weekend"
        android:textColor="#000000"
        android:textSize="30sp"
        android:typeface="sans"
        tools:text="Вихідні" />

    <TextView
        android:id="@+id/name"
        android:layout_width="163dp"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="1"
        android:gravity="center"
        android:textColor="#673AB7"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="0"
        android:textColor="#000000"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="1"
        android:textColor="#000000"
        android:textSize="16sp" />
</GridLayout>